# Multi_Auth_Desktop

./: .gitignore  README.md
AP/: CMakeLists.txt  Multi_Level_Authentication_pairFree_Client_zh_CN.ts
AP/include/: KGC_pariFree.h  accumulator.h  loader.h  mainwindow.h  qt_connectclient.h  qt_filemanage.h  qt_socketclient.h  transfer.h
AP/src/: KGC_pairFree.cpp  accumulator.cpp  loader.cpp  mainwindow.cpp  mainwindow.cpp.autosave  qt_connectclient.cpp  qt_filemanage.cpp  qt_socketclient.cpp
AP/ui/: mainwindow.ui  qt_connectclient.ui  qt_filemanage.ui  qt_socketclient.ui
AS/: CMakeLists.txt  Multi_Level_Authentication_pairFree_zh_CN.ts
AS/include/: Data_struct.h  KGC_pariFree.h  Login.h  Process_pairFree.h  accumulator.h  loader.h  qt_filechoose.h  qt_fileissuance.h  qt_initializekgc.h  qt_mainwindow.h  qt_socketserver.h  utils.h
AS/lib/: libpbc.so.1.0.0
AS/src/: KGC_pairFree.cpp  Login.cpp  Process_pairFree.cpp  loader.cpp  main.cpp  qt_filechoose.cpp  qt_fileissuance.cpp  qt_initializekgc.cpp  qt_mainwindow.cpp  qt_socketserver.cpp  transfer.cpp  utils.cpp
AS/ui/: login.ui  qt_filechoose.ui  qt_fileissuance.ui  qt_initializekgc.ui  qt_mainwindow.ui  qt_socketserver.ui
